--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:06:10 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:06:53 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,8 +166,8 @@ E thru 7</td>
 -2 thru 10</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -184,8 +184,8 @@ E thru 7</td>
 E (F)</td>
       <td class="greyout leftborder">Russell Henley +3
 +2 (F)</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
@@ -216,8 +216,8 @@ E (F)</td>
 +1 (F)</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 E (F)</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -280,8 +280,8 @@ E thru 7</td>
 +3 (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 (F)</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -294,8 +294,8 @@ E thru 7</td>
 -2 thru 7</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka(W) +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka(W) +6
++3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -344,8 +344,8 @@ E (F)</td>
 +1 thru 17</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 -2 thru 7</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -374,8 +374,8 @@ E thru 7</td>
 +1 thru 17</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -438,8 +438,8 @@ E thru 7</td>
 -2 thru 10</td>
       <td>Justin Thomas(W) +2
 -2 thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
     </tr>
@@ -454,8 +454,8 @@ E thru 7</td>
 E (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
     </tr>
@@ -485,7 +485,7 @@ E (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Rory McIlroy +2
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout">Xander Schauffele(W) +7
@@ -503,7 +503,7 @@ E thru 7</td>
       <td>Robert MacIntyre +2
 +1 (F)</td>
       <td class="greyout leftborder">Rory McIlroy +2
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout">Jon Rahm +2
 E (F)</td>
     </tr>
@@ -518,8 +518,8 @@ E thru 7</td>
 +3 (F)</td>
       <td>Billy Horschel +3
 +1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -550,8 +550,8 @@ E (F)</td>
 +3 (F)</td>
       <td>Justin Thomas(W) +2
 -2 thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -568,8 +568,8 @@ E (F)</td>
 -2 thru 7</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 (F)</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
@@ -579,7 +579,7 @@ E (F)</td>
       <td>Cameron Smith -2
 +2 thru 8</td>
       <td>Rory McIlroy(W) +2
-+1 thru 17</td>
++1 (F)</td>
       <td>Justin Thomas +2
 -2 thru 7</td>
       <td class="greyout leftborder">Tiger Woods +2
@@ -662,8 +662,8 @@ E thru 7</td>
 +3 (F)</td>
       <td>Sam Burns +5
 +2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -678,8 +678,8 @@ E thru 7</td>
 +3 (F)</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
     </tr>
@@ -693,7 +693,7 @@ E thru 7</td>
       <td>Justin Thomas(W) +2
 -2 thru 7</td>
       <td>Rory McIlroy +2
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -709,7 +709,7 @@ E (F)</td>
       <td>Tiger Woods(W) +2
 +3 thru 8</td>
       <td>Rory McIlroy +2
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout leftborder">Justin Thomas +2
 -2 thru 7</td>
       <td class="greyout">Viktor Hovland +4
@@ -725,11 +725,11 @@ E (F)</td>
       <td>Justin Thomas(W) +2
 -2 thru 7</td>
       <td>Rory McIlroy +2
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout leftborder">Jon Rahm +2
 E (F)</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
@@ -739,7 +739,7 @@ E (F)</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Rory McIlroy(W) +2
-+1 thru 17</td>
++1 (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
@@ -758,8 +758,8 @@ E (F)</td>
 E (F)</td>
       <td>Sam Burns +5
 +2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -774,8 +774,8 @@ E (F)</td>
 E (F)</td>
       <td>Justin Thomas +2
 -2 thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
     </tr>
@@ -796,22 +796,6 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Wylie</td>
-      <td class="bigbold">3</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 7</td>
-      <td>Brooks Koepka +5
-+2 thru 17</td>
-      <td class="greyout leftborder">Xander Schauffele +7
-+5 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">4</td>
       <td>Cameron Smith -2
@@ -819,7 +803,7 @@ Missed Cut</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
       <td>Rory McIlroy +2
-+1 thru 17</td>
++1 (F)</td>
       <td>Bubba Watson +2
 +1 (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
@@ -828,20 +812,20 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Philip Dale</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">Wylie</td>
+      <td class="bigbold">4</td>
       <td>Scottie Scheffler -3
 E thru 7</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
       <td>Justin Thomas(W) +2
 -2 thru 7</td>
-      <td>Brooks Koepka +5
-+2 thru 17</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
+      <td>Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele +7
 +5 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -849,7 +833,7 @@ E thru 7</td>
       <td>Collin Morikawa(W) -1
 -2 (F)</td>
       <td>Rory McIlroy +2
-+1 thru 17</td>
++1 (F)</td>
       <td>Justin Thomas +2
 -2 thru 7</td>
       <td>Tiger Woods +2
@@ -867,7 +851,7 @@ E thru 7</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
       <td>Rory McIlroy +2
-+1 thru 17</td>
++1 (F)</td>
       <td>Justin Thomas +2
 -2 thru 7</td>
       <td class="greyout leftborder">Jordan Spieth +6
@@ -883,11 +867,11 @@ E thru 7</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
       <td>Rory McIlroy +2
-+1 thru 17</td>
++1 (F)</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -902,10 +886,10 @@ E (F)</td>
 E (F)</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
-      <td class="greyout">Jordan Spieth(W) +6
+      <td class="greyout leftborder">Jordan Spieth(W) +6
 +4 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -918,10 +902,10 @@ E thru 7</td>
 E (F)</td>
       <td>Sam Burns +5
 +2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
-      <td class="greyout">Jordan Spieth(W) +6
+      <td class="greyout leftborder">Jordan Spieth(W) +6
 +4 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -935,6 +919,22 @@ E (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Philip Dale</td>
+      <td class="bigbold">6</td>
+      <td>Scottie Scheffler -3
+E thru 7</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 7</td>
+      <td>Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
@@ -956,22 +956,6 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">7</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 7</td>
-      <td>Brooks Koepka +5
-+2 thru 17</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">7</td>
       <td>Will Zalatoris -1
@@ -982,8 +966,8 @@ E (F)</td>
 -2 thru 7</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
     </tr>
@@ -993,13 +977,13 @@ E (F)</td>
       <td>Patrick Cantlay(W) +1
 +3 (F)</td>
       <td>Rory McIlroy +2
-+1 thru 17</td>
++1 (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Justin Thomas +2
 -2 thru 7</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -1011,13 +995,29 @@ E (F)</td>
       <td>Justin Thomas(W) +2
 -2 thru 7</td>
       <td>Rory McIlroy +2
-+1 thru 17</td>
++1 (F)</td>
       <td>Sam Burns +5
 +2 (F)</td>
       <td class="greyout leftborder">Xander Schauffele +7
 +5 (F)</td>
       <td class="greyout">Justin Rose +8
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">8</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 7</td>
+      <td>Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -1030,22 +1030,22 @@ E (F)</td>
 +1 (F)</td>
       <td>Viktor Hovland(W) +4
 +4 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">9</td>
       <td>Scottie Scheffler -3
 E thru 7</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
-      <td>Brooks Koepka +5
-+2 thru 17</td>
+      <td>Brooks Koepka +6
++3 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -1053,15 +1053,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">14</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
       <td>Justin Thomas +2
 -2 thru 7</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
-      <td>Brooks Koepka +5
-+2 thru 17</td>
+      <td>Brooks Koepka +6
++3 (F)</td>
       <td class="greyout leftborder">Xander Schauffele +7
 +5 (F)</td>
       <td class="greyout">Louis Oosthuizen
@@ -1069,15 +1069,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">14</td>
       <td>Justin Thomas(W) +2
 -2 thru 7</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
-      <td>Brooks Koepka +5
-+2 thru 17</td>
+      <td>Brooks Koepka +6
++3 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
