--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:06:10 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:06:53 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -168,8 +168,8 @@ E (F)</td>
 +1 thru 17</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 -2 thru 7</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -182,8 +182,8 @@ E (F)</td>
 -2 thru 10</td>
       <td>Jon Rahm +2
 E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
     </tr>
@@ -200,8 +200,8 @@ E thru 7</td>
 +2 thru 9</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 -2 thru 7</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -215,7 +215,7 @@ E thru 7</td>
       <td>Justin Thomas +2
 -2 thru 7</td>
       <td class="greyout leftborder">Rory McIlroy +2
-+1 thru 17</td>
++1 (F)</td>
       <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
     </tr>
@@ -248,8 +248,8 @@ E thru 7</td>
 -2 thru 7</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
 +4 (F)</td>
-      <td class="greyout">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -261,9 +261,9 @@ E thru 7</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Rory McIlroy +2
-+1 thru 17</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
++1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -294,10 +294,10 @@ E thru 7</td>
 +3 (F)</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
-      <td class="greyout">Jordan Spieth +6
+      <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -358,10 +358,10 @@ Missed Cut</td>
 E (F)</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
-      <td class="greyout">Jordan Spieth(W) +6
+      <td class="greyout leftborder">Jordan Spieth(W) +6
 +4 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -374,8 +374,8 @@ E (F)</td>
 +1 (F)</td>
       <td>Viktor Hovland(W) +4
 +4 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +5
-+2 thru 17</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Luke List +7
 +2 thru 11</td>
     </tr>
