--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:21:56 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:22:39 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,9 +141,9 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler(W) -3
-E thru 7</td>
+      <td class="bigbold">-10</td>
+      <td>Scottie Scheffler(W) -4
+-1 thru 8</td>
       <td>Hideki Matsuyama -2
 -2 thru 8</td>
       <td>Cameron Smith -1
@@ -157,9 +157,9 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
       <td>Tony Finau -1
 E thru 8</td>
       <td>Shane Lowry -1
@@ -173,9 +173,9 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
       <td>Cameron Smith(W) -1
 +3 thru 9</td>
       <td>Corey Conners -1
@@ -189,9 +189,9 @@ E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
       <td>Cameron Smith(W) -1
 +3 thru 9</td>
       <td>Corey Conners -1
@@ -205,9 +205,9 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Cameron Smith -1
@@ -218,6 +218,70 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Xander Schauffele(W) +7
 +5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler(W) -4
+-1 thru 8</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
+      <td>Dustin Johnson -2
++1 (F)</td>
+      <td>Adam Scott E
+-2 thru 8</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka(W) +6
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Webb Simpson +1
++2 (F)</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
+      <td>Cameron Smith(W) -1
++3 thru 9</td>
+      <td>Shane Lowry -1
+-2 thru 10</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -268,52 +332,36 @@ E (F)</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">CRED</td>
+      <td class="bigbold">Walk 2</td>
       <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
-      <td>Dustin Johnson -2
-+1 (F)</td>
-      <td>Adam Scott E
--2 thru 8</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka(W) +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Webb Simpson +1
+      <td>Cameron Smith -1
++3 thru 9</td>
+      <td>Tyrrell Hatton +2
 +2 (F)</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-E (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +4
++4 (F)</td>
+      <td class="greyout">Sam Burns +5
++2 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
-      <td>Cameron Smith(W) -1
-+3 thru 9</td>
-      <td>Shane Lowry -1
--2 thru 10</td>
+      <td>Scottie Scheffler(W) -4
+-1 thru 8</td>
+      <td>Corey Conners -1
++1 (F)</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
+      <td>Robert MacIntyre +2
++1 (F)</td>
+      <td class="greyout leftborder">Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout">Jon Rahm +2
+E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -332,34 +380,34 @@ E thru 8</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Cameron Smith -1
-+3 thru 9</td>
-      <td>Tyrrell Hatton +2
-+2 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +4
+      <td>Shane Lowry -1
+-2 thru 10</td>
+      <td>Justin Thomas(W) +2
+-2 thru 8</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
-      <td class="greyout">Sam Burns +5
-+2 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler(W) -3
-E thru 7</td>
-      <td>Corey Conners -1
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
+      <td>Cameron Smith(W) -1
++3 thru 9</td>
+      <td>Matthew Fitzpatrick E
 +1 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -380,32 +428,16 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Shane Lowry -1
--2 thru 10</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
-      <td>Cameron Smith(W) -1
+      <td>Scottie Scheffler(W) -4
+-1 thru 8</td>
+      <td>Cameron Smith -1
 +3 thru 9</td>
-      <td>Matthew Fitzpatrick E
-+1 (F)</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
+      <td>Billy Horschel +3
++1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -426,6 +458,22 @@ E (F)</td>
 E (F)</td>
       <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Patrick Cantlay(W) +1
++3 (F)</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Sam Burns +5
++2 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -460,22 +508,6 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Patrick Cantlay(W) +1
-+3 (F)</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Sam Burns +5
-+2 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Grace</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
@@ -490,22 +522,6 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Xander Schauffele(W) +7
 +5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler(W) -3
-E thru 7</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Robert MacIntyre +2
-+1 (F)</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout">Jon Rahm +2
-E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -524,22 +540,6 @@ E (F)</td>
 Out With Injury</td>
     </tr>
     <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler(W) -3
-E thru 7</td>
-      <td>Cameron Smith -1
-+3 thru 9</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Billy Horschel +3
-+1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">0</td>
       <td>Joaquin Niemann -2
@@ -548,12 +548,28 @@ E thru 7</td>
 -2 thru 10</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Brian Harman +4
-+2 thru 13</td>
+      <td>Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 (F)</td>
+      <td class="greyout">Brian Harman +5
++3 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">1</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 8</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 (F)</td>
-      <td class="greyout">Sam Burns +5
-+2 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -586,6 +602,22 @@ E (F)</td>
 E (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">BCREAMED</td>
+      <td class="bigbold">1</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
+      <td>Cameron Smith(W) -1
++3 thru 9</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -652,22 +684,6 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">2</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">2</td>
       <td>Corey Conners -1
@@ -682,22 +698,6 @@ E (F)</td>
 +2 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">BCREAMED</td>
-      <td class="bigbold">2</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
-      <td>Cameron Smith(W) -1
-+3 thru 9</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Sam Burns +5
-+2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
@@ -764,6 +764,22 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Wylie</td>
+      <td class="bigbold">3</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 8</td>
+      <td>Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele +7
++5 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">4</td>
       <td>Joaquin Niemann -2
@@ -796,20 +812,52 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Wylie</td>
+      <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">4</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
-      <td>Will Zalatoris -1
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
+      <td>Jon Rahm(W) +2
 E (F)</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td>Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neville Spillman</td>
+      <td class="bigbold">4</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth(W) +6
++4 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Philip Dale</td>
+      <td class="bigbold">5</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
       <td>Justin Thomas(W) +2
 -2 thru 8</td>
       <td>Brooks Koepka +6
 +3 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele +7
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -860,22 +908,6 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">5</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td>Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">5</td>
       <td>Dustin Johnson -2
@@ -886,22 +918,6 @@ E (F)</td>
 E (F)</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +6
-+4 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neville Spillman</td>
-      <td class="bigbold">5</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td>Sam Burns +5
-+2 (F)</td>
       <td class="greyout leftborder">Jordan Spieth(W) +6
 +4 (F)</td>
       <td class="greyout">Brooks Koepka +6
@@ -919,22 +935,6 @@ E (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Philip Dale</td>
-      <td class="bigbold">6</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas(W) +2
--2 thru 8</td>
-      <td>Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
@@ -1020,6 +1020,22 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">8</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td>Viktor Hovland +4
++4 (F)</td>
+      <td>Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Benjac</td>
       <td class="bigbold">8</td>
       <td>Cameron Smith -1
@@ -1034,22 +1050,6 @@ E (F)</td>
 +5 (F)</td>
       <td class="greyout">Justin Rose +8
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">9</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td>Viktor Hovland +4
-+4 (F)</td>
-      <td>Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
