--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:21:56 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:22:39 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,9 +141,9 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -3
-E thru 7</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -4
+-1 thru 8</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Tony Finau -1
@@ -157,9 +157,9 @@ E thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler(W) -3
-E thru 7</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler(W) -4
+-1 thru 8</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Shane Lowry -1
@@ -170,6 +170,22 @@ E (F)</td>
 +3 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Larry Judge</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler(W) -4
+-1 thru 8</td>
+      <td>Cameron Smith -1
++3 thru 9</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -234,22 +250,6 @@ E thru 8</td>
 +1 (F)</td>
       <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler(W) -3
-E thru 7</td>
-      <td>Cameron Smith -1
-+3 thru 9</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Sam Burns +5
-+2 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
